UIP-2666 Fix integer field up/down button alignment by flipping instead of rotating the caret

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1579,7 +1579,7 @@ input[type=file] {
             &.integer-up {
                 margin: 0 0 3px;
 
-                @include rotate(180deg);
+                @include flipV;
             }
         }
 
