--- a/packages/ui-library/src/css/mixins.scss
+++ b/packages/ui-library/src/css/mixins.scss
@@ -241,6 +241,14 @@
     transform: rotate($degrees);
 }
 
+@mixin flipV {
+    -webkit-transform: scaleY(-1);
+    -moz-transform: scaleY(-1);
+    -ms-transform: scaleY(-1);
+    -o-transform: scaleY(-1);
+    transform: scaleY(-1);
+}
+
 @mixin keyframes($animation-name) {
     @-webkit-keyframes #{$animation-name} {
         @content;
